--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -151,13 +151,16 @@
       margin-left: auto;
     }
 
-    .dropdown:hover .dropdown-content {
+    .dropdown:hover .dropdown-content,
+    .dropdown.open .dropdown-content {
       display: block;
     }
   }
 
   .current-page {
-    text-decoration: line-through;
+    font-weight: bold;
+    border-bottom: 2px solid currentColor;
+    text-decoration: none;
   }
 
   @media screen and (min-width: $on-medium) {
